--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "axios": "^1.6.0",
     "naive-ui": "^2.35.0",
     "pinia": "^2.1.7",
+    "three": "^0.158.0",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@types/node": "^20.8.3",
+    "@types/three": "^0.158.3",
     "@vitejs/plugin-vue": "^4.2.3",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
