--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.6.0",
+    "earth-flyline": "^1.2.7",
     "naive-ui": "^2.35.0",
     "pinia": "^2.1.7",
     "three": "^0.158.0",
@@ -20,6 +21,7 @@
     "@types/node": "^20.8.3",
     "@types/three": "^0.158.3",
     "@vitejs/plugin-vue": "^4.2.3",
+    "sass": "^1.69.5",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
     "vue-tsc": "^1.8.5"
