--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   },
   "dependencies": {
     "axios": "^1.6.0",
-    "naive-ui": "^2.35.0",
     "pinia": "^2.1.7",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
@@ -18,7 +17,9 @@
   "devDependencies": {
     "@types/node": "^20.8.3",
     "@vitejs/plugin-vue": "^4.2.3",
+    "naive-ui": "^2.35.0",
     "typescript": "^5.0.2",
+    "vfonts": "^0.0.3",
     "vite": "^4.4.5",
     "vue-tsc": "^1.8.5"
   }
