--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
   },
   "devDependencies": {
     "@types/node": "^20.8.3",
-    "@vicons/fluent": "^0.12.0",
     "@types/three": "^0.158.3",
+    "@vicons/fluent": "^0.12.0",
+    "@vicons/ionicons5": "^0.12.0",
     "@vitejs/plugin-vue": "^4.2.3",
     "naive-ui": "^2.35.0",
     "sass": "^1.69.5",
