--- a/package.json
+++ b/package.json
@@ -9,14 +9,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@pixi/graphics-extras": "^7.3.2",
     "axios": "^1.6.0",
-    "earth-flyline": "^1.2.7",
     "chart.js": "^4.4.1",
+    "earth-flyline": "^1.2.7",
     "naive-ui": "^2.35.0",
     "pinia": "^2.1.7",
     "pixi.js": "^7.3.2",
-    "three": "^0.158.0",
     "primevue": "^3.42.0",
+    "three": "^0.158.0",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
   },
