--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "chart.js": "^4.4.1",
     "clipboard": "^2.0.11",
     "earth-flyline": "^1.2.7",
+    "mitt": "^3.0.1",
     "naive-ui": "^2.35.0",
     "pinia": "^2.1.7",
     "pixi.js": "^7.3.2",
