--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "axios": "^1.6.0",
     "chart.js": "^4.4.1",
     "clipboard": "^2.0.11",
+    "crypto-js": "^4.2.0",
     "earth-flyline": "^1.2.7",
     "echarts": "^5.4.3",
+    "jsencrypt": "^3.3.2",
     "mitt": "^3.0.1",
     "naive-ui": "^2.35.0",
     "pinia": "^2.1.7",
@@ -26,6 +28,7 @@
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.2.1",
     "@types/node": "^20.8.3",
     "@types/three": "^0.158.3",
     "@vicons/fluent": "^0.12.0",
